# cogmech

./: .gitignore  CMakeLists.txt  README.md  USAGE.txt  build.sh  cogmec  test.sh
cogm/errors/: 00-unterminated-quote.cogm  00-unterminated-quote.cogm.stderr  01-invalid-token.cogm.stderr  02-transclude-invalid-args.cogm.stderr  03-transclude-unstructured.cogm.stderr  04-match-invalid-args.cogm.stderr  05-invalid-dot.cogm  05-invalid-dot.cogm.stderr  06-invalid-begin-statement.cogm  06-invalid-begin-statement.cogm.stderr  07-expected-expression.cogm.stderr  08-invalid-op-definition-param.cogm  08-invalid-op-definition-param.cogm.stderr  09-word-statement-must-define.cogm.stderr  10-undefined-op.cogm.stderr  11-op-invalid-args.cogm.stderr  12-undefined-symbol.cogm.stderr  13-redefined-symbol.cogm.stderr  14-redefined-op.cogm.stderr  15-class-closing-bracket.cogm.stderr  16-unterminated-expr-list.cogm.stderr  17-invalid-eval.cogm  17-invalid-eval.cogm.stderr  18-invalid-increment.cogm  18-invalid-increment.cogm.stderr  19-invalid-increment-args.cogm.stderr  20-invalid-decrement.cogm.stderr  21-invalid-decrement-args.cogm.stderr  22-invalid-key.cogm  22-invalid-key.cogm.stderr  23-invalid-op-def.cogm  23-invalid-op-def.cogm.stderr  24-end-of-tokens.cogm  24-end-of-tokens.cogm.stderr  25-unterminated-statement.cogm  25-unterminated-statement.cogm.stderr  26-macro-error-location.cogm  26-macro-error-location.cogm.stderr  27-macro-redefined.cogm  27-macro-redefined.cogm.stderr
cogm/examples/: 00-hello.cogm  01-comments.cogm  02-extract.cogm  02-ints.cogm  03-symbols.cogm  03-transclude.cogm  04-extract-transclude.cogm  05-classes.cogm  05-classes.cogm.stdout  05-match.cogm  06-dot.cogm  07-int-comparison.cogm  07-keys.cogm  07-keys.cogm.stdout  08-op.cogm  09-evaluation.cogm  10-integers.cogm  10-macros.cogm  11-increment-decrement.cogm  13-add.cogm  13-add.cogm.stdout  14-comments.cogm  14-comments.cogm.stdout  16-universal-test-ref.cogm  17-test-trace-2.cogm  17-universal-test-compose.cogm  18-universal-test-extract.cogm  19-universal-test-transclude.cogm  20-universal-test-incr-decr.cogm  21-test-trace-1.cogm  21-test-trace-1.cogm.stdout  22-test-trace-2.cogm.stdout
cogm/lib/: alt.cogm  math.cogm  std.cogm
cogm/tests/: 00-hello.cogm  08-relations.cogm  13-add.cogm  13-math.cogm  13-math.cogm.stdout  15-macros.cogm  15-macros.cogm.stdout
cogm/universal/: universal.cogm
cogm/universal/tests/: compose.cogm  compose.cogm.stdout  extract.cogm  incr-decr.cogm  incr-decr.cogm.stdout  ref.cogm  ref.cogm.stdout  transclude.cogm  transclude.cogm.stdout
src/: context.c  context.h  file.c  file.h  interpreter.c  interpreter.h  main.c  node.c  node.h  parser.c  parser.h  stringview.c  stringview.h  token.c  token.h  tokenize.h  tokenizer.c  tokenizer.h  tokenlist.c  tokenlist.h  util.c  util.h
tests/: main.c
tests/cogm/: 00-hello.cogm.stdout  01-silent.cogm  04-match.cogm  05-classes.cogm  06-dot.cogm  07-keys.cogm  07-keys.cogm.stdout  08-relations.cogm  08-relations.cogm.stdout  09-operations.cogm  10-integers.cogm.stdout  11-increment-decrement.cogm.stdout
tests/cogm/errors/: 00-unterminated-quote.cogm.stderr  01-invalid-token.cogm  01-invalid-token.cogm.stderr  02-transclude-invalid-args.cogm  02-transclude-invalid-args.cogm.stderr  03-transclude-unstructured.cogm  03-transclude-unstructured.cogm.stderr  04-match-invalid-args.cogm  04-match-invalid-args.cogm.stderr  05-invalid-dot.cogm.stderr  06-invalid-begin-statement.cogm  06-invalid-begin-statement.cogm.stderr  07-expected-expression.cogm  07-expected-expression.cogm.stderr  10-undefined-op.cogm  (+25 more)
tests/func/: func.c  func.h  main.c  test.c
tests/unit/: test.c  test_context.c  test_context.h  test_file.c  test_file.h  test_func.c  test_func.h  test_interpreter.c  test_interpreter.h  test_node.c  test_node.h  test_parser.c  test_parser.h  test_stringview.c  test_stringview.h  test_token.c  test_token.h  test_tokenize.c  test_tokenizer.c  test_tokenizer.h  test_tokenlist.c  test_tokenlist.h  tokenize  tokenize.c  unit.c  unit.h
(+5 files in other folders)
